--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ fieldset{
   </style>
 </head>
 <body>
-  <h1>HELLO RWANDA</h1>
+  <h2>HELLO WORLD</h2>
+  <h2>this is my 1st projects</h2>
 <form action="" method="">
 <div class="container">
  <fieldset>
